[gd_scene load_steps=7 format=3 uid="uid://cfwps7ao3bsc7"]

[ext_resource type="Script" path="res://castles/castle.gd" id="1_egse6"]
[ext_resource type="Texture2D" uid="uid://r3pnm3x0l2bq" path="res://sprites/buildings/castle-1.png" id="2_dlycb"]
[ext_resource type="Script" path="res://castle_body.gd" id="3_tt2v5"]
[ext_resource type="AudioStream" uid="uid://gylt1xt0osdi" path="res://sounds/castle_destroyed.wav" id="4_8xxwi"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hn40p"]
size = Vector2(26, 16.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4bymn"]
size = Vector2(62, 36.5)

[node name="Castle" type="Node2D"]
y_sort_enabled = true
scale = Vector2(2, 2)
script = ExtResource("1_egse6")

[node name="Sprite2D" type="Sprite2D" parent="."]
y_sort_enabled = true
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_dlycb")

[node name="SpawnArea" type="Area2D" parent="."]
position = Vector2(-20, 37)
input_pickable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpawnArea"]
shape = SubResource("RectangleShape2D_hn40p")

[node name="CastleBody" type="StaticBody2D" parent="."]
show_behind_parent = true
script = ExtResource("3_tt2v5")

[node name="CollisionShape2D" type="CollisionShape2D" parent="CastleBody"]
position = Vector2(0, 10)
shape = SubResource("RectangleShape2D_4bymn")
debug_color = Color(0, 0.6, 0.701961, 0.419608)

[node name="HpBar" type="ProgressBar" parent="CastleBody"]
modulate = Color(0, 1, 0, 1)
show_behind_parent = true
texture_filter = 1
offset_left = -23.0
offset_top = -25.0
offset_right = 21.0
offset_bottom = -21.0
value = 75.0
show_percentage = false

[node name="DestroyedSfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_8xxwi")
max_distance = 1500.0
